--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
                     <label for="new-task-title" class="form-label">Task Title</label>
                     <input type="text" class="form-control" id="new-task-title">
                 </div>
-                <div>
+                <div class="mb-3">
+                    <label for="new-task-priority" class="form-label">Priority</label>
                     <select name="new-task-priority" id="new-task-priority" class="form-select">
                         <option value="low">Low</option>
                         <option value="medium" selected>Medium</option>
                         <option value="high">High</option>
                     </select>
                 </div>
-                <div class="form-check">
+                <div class="mb-3 form-check">
                     <input class="form-check-input" type="checkbox" value="done" id="new-task-done">
                     <label class="form-check-label" for="flexCheckDefault">Task completed?</label>
                 </div>
