Added alert message for blank task titles
* When a user tries to create a new task with a blank title, the task
  will not be created. Instead, the user will now get an alert stating
  the problem.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body class="bg-secondary">
     <div class="container-lg">
         <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <div id="new-task-error-alert" class="alert alert-danger not-visible" role="alert">
+                The task title must not be blank.
+            </div>
             <form id="new-task-form">
                 <div class="mb-3">
                     <label for="new-task-title" class="form-label">Task Title</label>
